updated the api and Css

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -50,3 +50,15 @@
     line-height: 1;
 
 }
+.weatherInfo {
+    margin-top: 20px;
+  }
+  
+  .weatherInfo .clearfix {
+    display: flex;
+    align-items: center;
+  }
+  
+  .weatherInfo .temperature {
+    margin-left: 10px;
+  }
