--- a/src/Weather.css
+++ b/src/Weather.css
@@ -62,3 +62,15 @@
   .weatherInfo .temperature {
     margin-left: 10px;
   }
+
+  @media (max-width: 900px) {
+    .weatherInfo .clearfix {
+        flex-direction: column;
+        align-items: start;
+    }
+
+    .weatherInfo .temperature {
+        margin-left: 0;
+        margin-top: 10px;
+    }
+  }
