--- a/src/Weather.css
+++ b/src/Weather.css
@@ -67,10 +67,18 @@
     .weatherInfo .clearfix {
         flex-direction: column;
         align-items: start;
+        width: 50;
     }
 
     .weatherInfo .temperature {
         margin-left: 0;
         margin-top: 10px;
+        font-size: 44px;
+
+    }
+
+    .weather canvas {
+        max-width: 50px;
+
     }
   }
