--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,4 +1,9 @@
-
+.container{
+    background-color: rgb(156, 181, 181);
+    box-shadow: inset 0 -3em 3em rgb(0 200 0 / 30%),
+    0 0 0 2px white,
+    0.3em 0.3em 1em rgb(200 0 0 / 60%);
+}
 .weather{
     font-family:arial, sans-serif;
     color: #878787;
@@ -6,7 +11,7 @@
     border-radius: 4px;
     padding: 16px;
     margin: 30px auto;
-  
+    background-color: rgb(255, 254, 254);
 }
 .weather form {
     margin-bottom: 20px;
