--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,9 +1,14 @@
 .container{
-    background-color: rgb(156, 181, 181);
+    background-color: pink;
     box-shadow: inset 0 -3em 3em rgb(0 200 0 / 30%),
     0 0 0 2px white,
     0.3em 0.3em 1em rgb(200 0 0 / 60%);
 }
+h1 {
+    font-weight: 800;
+    opacity: 0.7;
+}
+
 .weather{
     font-family:arial, sans-serif;
     color: #878787;
@@ -17,11 +22,12 @@
     margin-bottom: 20px;
 }
 .weather h1 {
-    color: rgb(135, 135, 135);
+    color: rgb(33, 31, 31);
     font-size: 24px;
     font-weight: 100;
     margin: 20px 0 0 0;
     line-height: 29px;
+
 }
 .weather ul {
     margin: 0;
@@ -68,6 +74,10 @@
     margin-left: 10px;
   }
 
+  footer {
+    font-size: 15px;
+  }
+   
   @media (max-width: 900px) {
     .weatherInfo .clearfix {
         flex-direction: column;
